feat: add Enums - Exercise Category, Difficult, Type. Update DataInitialazer